--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -26,7 +26,7 @@
 
 ;This is basic url to jobs page (for SEO).
 routes.jobsbasic.route = "/Jobs/:city/:state/:country/:region/:page"
-routes.jobsbasic.defaults.controller = Job
+routes.jobsbasic.defaults.controller = jobs
 routes.jobsbasic.defaults.action = jobs
 routes.jobsbasic.defaults.city = ""
 routes.jobsbasic.defaults.state = ""
@@ -37,7 +37,7 @@ routes.jobsbasic.reqs.page = "[0-9]+"
 
 ;Job search page.
 routes.jobssearch.route = "/Jobs/search/:query/:city/:state/:country/:region/:page"
-routes.jobssearch.defaults.controller = Job
+routes.jobssearch.defaults.controller = jobs
 routes.jobssearch.defaults.action = jobssearch
 routes.jobssearch.defaults.query = ""
 routes.jobssearch.defaults.city = ""
@@ -49,7 +49,7 @@ routes.jobssearch.reqs.page = "[0-9]+"
 
 ;Job basic refine page
 routes.jobsbasicrefine.route = "/Jobs/refine/:city/:state/:country/:region/:page"
-routes.jobsbasicrefine.defaults.controller = Job
+routes.jobsbasicrefine.defaults.controller = jobs
 routes.jobsbasicrefine.defaults.action = jobsrefine
 routes.jobsbasicrefine.defaults.city = ""
 routes.jobsbasicrefine.defaults.state = ""
@@ -60,7 +60,7 @@ routes.jobsbasicrefine.reqs.page = "[0-9]+"
 
 ;Job search refine page
 routes.jobssearchrefine.route = "/Jobs/search/refine/:query/:city/:state/:country/:region/:page"
-routes.jobssearchrefine.defaults.controller = Job
+routes.jobssearchrefine.defaults.controller = jobs
 routes.jobssearchrefine.defaults.action = jobssearchrefine
 routes.jobssearchrefine.defaults.query = ""
 routes.jobssearchrefine.defaults.city = ""
