--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -83,8 +83,8 @@ routes.searchrealestatebasic.defaults.page = 1
 routes.searchrealestatebasic.reqs.page = "[0-9]+"
 
 routes.searchdispatch.route = "/search"
-routes.searchdispatch.defaults.controller = search
-routes.searchdispatch.defaults.action = searchdispatch
+routes.searchdispatch.defaults.controller = index
+routes.searchdispatch.defaults.action = categorydispatch
 
 routes.error.route = "/error/:error_code"
 routes.error.defaults.controller = error
