--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -24,6 +24,107 @@
 ;routes.search.defaults.country = ''
 
 
+
+routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
+routes.realestatebasic.defaults.controller = search
+routes.realestatebasic.defaults.action = jobssearch
+routes.realestatebasic.defaults.city = ""
+routes.realestatebasic.defaults.state = ""
+routes.realestatebasic.defaults.country = ""
+routes.realestatebasic.defaults.region = ""
+routes.realestatebasic.defaults.page = 1
+routes.realestatebasic.reqs.page = "[0-9]+"
+
+routes.classifiedsbasic.route = "/Classifieds/:city/:state/:country/:region/:page"
+routes.classifiedsbasic.defaults.controller = jobs
+routes.classifiedsbasic.defaults.action = searchjobs
+routes.classifiedsbasic.defaults.city = ""
+routes.classifiedsbasic.defaults.state = ""
+routes.classifiedsbasic.defaults.country = ""
+routes.classifiedsbasic.defaults.region = ""
+routes.classifiedsbasic.defaults.page = 1
+routes.classifiedsbasic.reqs.page = "[0-9]+"
+
+routes.carsalebasic.route = "/Car Sale/:city/:state/:country/:region/:page"
+routes.carsalebasic.defaults.controller = jobs
+routes.carsalebasic.defaults.action = jobssearch
+routes.carsalebasic.defaults.city = ""
+routes.carsalebasic.defaults.state = ""
+routes.carsalebasic.defaults.country = ""
+routes.carsalebasic.defaults.region = ""
+routes.carsalebasic.defaults.page = 1
+routes.carsalebasic.reqs.page = "[0-9]+"
+
+
+routes.healthfitnessbasic.route = "/Health & Fitness/:city/:state/:country/:region/:page"
+routes.healthfitnessbasic.defaults.controller = jobs
+routes.healthfitnessbasic.defaults.action = jobssearch
+routes.healthfitnessbasic.defaults.city = ""
+routes.healthfitnessbasic.defaults.state = ""
+routes.healthfitnessbasic.defaults.country = ""
+routes.healthfitnessbasic.defaults.region = ""
+routes.healthfitnessbasic.defaults.page = 1
+routes.healthfitnessbasic.reqs.page = "[0-9]+"
+
+
+routes.eventsbasic.route = "/Events/:city/:state/:country/:region/:page"
+routes.eventsbasic.defaults.controller = jobs
+routes.eventsbasic.defaults.action = searchjobs
+routes.eventsbasic.defaults.city = ""
+routes.eventsbasic.defaults.state = ""
+routes.eventsbasic.defaults.country = ""
+routes.eventsbasic.defaults.region = ""
+routes.eventsbasic.defaults.page = 1
+routes.eventsbasic.reqs.page = "[0-9]+"
+
+
+routes.activitiesbasic.route = "/Activities/:city/:state/:country/:region/:page"
+routes.activitiesbasic.defaults.controller = jobs
+routes.activitiesbasic.defaults.action = searchjobs
+routes.activitiesbasic.defaults.city = ""
+routes.activitiesbasic.defaults.state = ""
+routes.activitiesbasic.defaults.country = ""
+routes.activitiesbasic.defaults.region = ""
+routes.activitiesbasic.defaults.page = 1
+routes.activitiesbasic.reqs.page = "[0-9]+"
+
+
+routes.hotelsbasic.route = "/Hotels/:city/:state/:country/:region/:page"
+routes.hotelsbasic.defaults.controller = jobs
+routes.hotelsbasic.defaults.action = searchjobs
+routes.hotelsbasic.defaults.city = ""
+routes.hotelsbasic.defaults.state = ""
+routes.hotelsbasic.defaults.country = ""
+routes.hotelsbasic.defaults.region = ""
+routes.hotelsbasic.defaults.page = 1
+routes.hotelsbasic.reqs.page = "[0-9]+"
+
+
+routes.restaurantsbasic.route = "/Restaurants/:city/:state/:country/:region/:page"
+routes.restaurantsbasic.defaults.controller = jobs
+routes.restaurantsbasic.defaults.action = searchjobs
+routes.restaurantsbasic.defaults.city = ""
+routes.restaurantsbasic.defaults.state = ""
+routes.restaurantsbasic.defaults.country = ""
+routes.restaurantsbasic.defaults.region = ""
+routes.restaurantsbasic.defaults.page = 1
+routes.restaurantsbasic.reqs.page = "[0-9]+"
+
+
+routes.businesslistingsbasic.route = "/Business Listings/:city/:state/:country/:region/:page"
+routes.businesslistingsbasic.defaults.controller = jobs
+routes.businesslistingsbasic.defaults.action = jobssearch
+routes.businesslistingsbasic.defaults.city = ""
+routes.businesslistingsbasic.defaults.state = ""
+routes.businesslistingsbasic.defaults.country = ""
+routes.businesslistingsbasic.defaults.region = ""
+routes.businesslistingsbasic.defaults.page = 1
+routes.businesslistingsbasic.reqs.page = "[0-9]+"
+
+
+
+
+
 ;This is basic url to jobs page (for SEO).
 routes.jobsbasic.route = "/Jobs/:city/:state/:country/:region/:page"
 routes.jobsbasic.defaults.controller = jobs
@@ -36,7 +137,7 @@ routes.jobsbasic.defaults.page = 1
 routes.jobsbasic.reqs.page = "[0-9]+"
 
 ;Job search page.
-routes.jobssearch.route = "/Jobs/search/:query/:city/:state/:country/:region/:page"
+routes.jobssearch.route = "/Jobs/:query/:city/:state/:country/:region/search/:page"
 routes.jobssearch.defaults.controller = jobs
 routes.jobssearch.defaults.action = jobssearch
 routes.jobssearch.defaults.query = ""
@@ -48,7 +149,7 @@ routes.jobssearch.defaults.page = 1
 routes.jobssearch.reqs.page = "[0-9]+"
 
 ;Job basic refine page
-routes.jobsbasicrefine.route = "/Jobs/refine/:city/:state/:country/:region/:page"
+routes.jobsbasicrefine.route = "/Jobs/:cat1/:cat2/:cate3/:city/:state/:country/:region/refine/:page"
 routes.jobsbasicrefine.defaults.controller = jobs
 routes.jobsbasicrefine.defaults.action = jobsrefine
 routes.jobsbasicrefine.defaults.city = ""
@@ -59,7 +160,7 @@ routes.jobsbasicrefine.defaults.page = 1
 routes.jobsbasicrefine.reqs.page = "[0-9]+"
 
 ;Job search refine page
-routes.jobssearchrefine.route = "/Jobs/search/refine/:query/:city/:state/:country/:region/:page"
+routes.jobssearchrefine.route = "/Jobs/:query/:cat1/:cat2/:cate3/:city/:state/:country/:region/search/refine/:page"
 routes.jobssearchrefine.defaults.controller = jobs
 routes.jobssearchrefine.defaults.action = jobssearchrefine
 routes.jobssearchrefine.defaults.query = ""
@@ -72,15 +173,6 @@ routes.jobssearchrefine.reqs.page = "[0-9]+"
 
 
 
-routes.searchrealestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
-routes.searchrealestatebasic.defaults.controller = search
-routes.searchrealestatebasic.defaults.action = searchjobs
-routes.searchrealestatebasic.defaults.city = ""
-routes.searchrealestatebasic.defaults.state = ""
-routes.searchrealestatebasic.defaults.country = ""
-routes.searchrealestatebasic.defaults.region = ""
-routes.searchrealestatebasic.defaults.page = 1
-routes.searchrealestatebasic.reqs.page = "[0-9]+"
 
 routes.searchdispatch.route = "/search"
 routes.searchdispatch.defaults.controller = index
