--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -172,6 +172,10 @@ routes.jobssearchrefine.defaults.page = 1
 routes.jobssearchrefine.reqs.page = "[0-9]+"
 
 
+routes.jobsajax.route = "/Jobs/ajax/:action/:param1"
+routes.jobsajax.defaults.controller = jobs
+routes.jobsajax.defaults.action = action
+routes.jobsajax.defaults.param1 = ""
 
 
 routes.searchdispatch.route = "/search"
