--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -149,7 +149,7 @@ routes.jobssearch.defaults.page = 1
 routes.jobssearch.reqs.page = "[0-9]+"
 
 ;Job basic refine page
-routes.jobsbasicrefine.route = "/Jobs/:cat1/:cat2/:cate3/:city/:state/:country/:region/refine/:page"
+routes.jobsbasicrefine.route = "/Jobs/:cat1name/:cat2name/:cat3name/:city/:state/:country/:region/refine/:cat1/:cat2/:cat3/:cat4/:cat5/:page"
 routes.jobsbasicrefine.defaults.controller = jobs
 routes.jobsbasicrefine.defaults.action = jobsrefine
 routes.jobsbasicrefine.defaults.city = ""
@@ -160,7 +160,7 @@ routes.jobsbasicrefine.defaults.page = 1
 routes.jobsbasicrefine.reqs.page = "[0-9]+"
 
 ;Job search refine page
-routes.jobssearchrefine.route = "/Jobs/:query/:cat1/:cat2/:cate3/:city/:state/:country/:region/search/refine/:page"
+routes.jobssearchrefine.route = "/Jobs/:query/:cat1name/:cat2name/:cat3name/:city/:state/:country/:region/search/refine/:cat1/:cat2/:cat3/:cat4/:cat5/:page"
 routes.jobssearchrefine.defaults.controller = jobs
 routes.jobssearchrefine.defaults.action = jobssearchrefine
 routes.jobssearchrefine.defaults.query = ""
@@ -170,12 +170,17 @@ routes.jobssearchrefine.defaults.country = ""
 routes.jobssearchrefine.defaults.region = ""
 routes.jobssearchrefine.defaults.page = 1
 routes.jobssearchrefine.reqs.page = "[0-9]+"
+       
 
-
-routes.jobsajax.route = "/Jobs/ajax/:action/:param1"
-routes.jobsajax.defaults.controller = jobs
+routes.jobsajax.route = "/ajax/:controller/:action/:param1"
+routes.jobsajax.defaults.controller = controller
 routes.jobsajax.defaults.action = action
 routes.jobsajax.defaults.param1 = ""
+
+routes.refinedispatch.route = "/refine/:controller"
+routes.refinedispatch.defaults.controller = controller
+routes.refinedispatch.defaults.action = refinedispatch
+
 
 
 routes.searchdispatch.route = "/search"
