--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -111,13 +111,13 @@ routes.restaurantsbasic.defaults.page = 1
 routes.restaurantsbasic.reqs.page = "[0-9]+"
 
 
-routes.businesslistingsbasic.route = "/Business Listings/:city/:state/:country/:region/:page"
+routes.businesslistingsbasic.route = "/Business Listings/:city/:state/:country/:locationid/:page"
 routes.businesslistingsbasic.defaults.controller = jobs
 routes.businesslistingsbasic.defaults.action = jobssearch
 routes.businesslistingsbasic.defaults.city = ""
 routes.businesslistingsbasic.defaults.state = ""
 routes.businesslistingsbasic.defaults.country = ""
-routes.businesslistingsbasic.defaults.region = ""
+routes.businesslistingsbasic.defaults.locationid = ""
 routes.businesslistingsbasic.defaults.page = 1
 routes.businesslistingsbasic.reqs.page = "[0-9]+"
 
@@ -125,19 +125,53 @@ routes.businesslistingsbasic.reqs.page = "[0-9]+"
 
 
 
+routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:locationid/:page"
+routes.realestatebasic.defaults.controller = realestate
+routes.realestatebasic.defaults.action = realestate
+routes.realestatebasic.defaults.city = ""
+routes.realestatebasic.defaults.state = ""
+routes.realestatebasic.defaults.country = ""
+routes.realestatebasic.defaults.locationid = ""
+routes.realestatebasic.defaults.page = 1
+routes.realestatebasic.reqs.page = "[0-9]+"
+
+routes.realestatesearch.route = "/Real Estate/:query/:city/:state/:country/:locationid/search/:page"
+routes.realestatesearch.defaults.controller = realestate
+routes.realestatesearch.defaults.action = realestatesearch
+routes.realestatesearch.defaults.query = ""
+routes.realestatesearch.defaults.city = ""
+routes.realestatesearch.defaults.state = ""
+routes.realestatesearch.defaults.country = ""
+routes.realestatesearch.defaults.region = ""
+routes.realestatesearch.defaults.locationid = ""
+routes.realestatesearch.defaults.page = 1
+routes.realestatesearch.reqs.page = "[0-9]+"
+
+routes.realestatebasicrefine.route = "/Real Estate/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat2/:cat3/:min/:max/:bed/:cars/:bath/:page"
+routes.realestatebasicrefine.defaults.controller = realestate
+routes.realestatebasicrefine.defaults.action = realestaterefine
+routes.realestatebasicrefine.defaults.city = ""
+routes.realestatebasicrefine.defaults.state = ""
+routes.realestatebasicrefine.defaults.country = ""
+routes.realestatebasicrefine.defaults.locationid = ""
+routes.realestatebasicrefine.defaults.page = 1
+routes.realestatebasicrefine.reqs.page = "[0-9]+"
+
+
+
 ;This is basic url to jobs page (for SEO).
-routes.jobsbasic.route = "/Jobs/:city/:state/:country/:region/:page"
+routes.jobsbasic.route = "/Jobs/:city/:state/:country/:locationid/:page"
 routes.jobsbasic.defaults.controller = jobs
 routes.jobsbasic.defaults.action = jobs
 routes.jobsbasic.defaults.city = ""
 routes.jobsbasic.defaults.state = ""
 routes.jobsbasic.defaults.country = ""
-routes.jobsbasic.defaults.region = ""
+routes.jobsbasic.defaults.locationid = ""
 routes.jobsbasic.defaults.page = 1
 routes.jobsbasic.reqs.page = "[0-9]+"
 
 ;Job search page.
-routes.jobssearch.route = "/Jobs/:query/:city/:state/:country/:region/search/:page"
+routes.jobssearch.route = "/Jobs/:query/:city/:state/:country/:locationid/search/:page"
 routes.jobssearch.defaults.controller = jobs
 routes.jobssearch.defaults.action = jobssearch
 routes.jobssearch.defaults.query = ""
@@ -145,17 +179,18 @@ routes.jobssearch.defaults.city = ""
 routes.jobssearch.defaults.state = ""
 routes.jobssearch.defaults.country = ""
 routes.jobssearch.defaults.region = ""
+routes.jobssearch.defaults.locationid = ""
 routes.jobssearch.defaults.page = 1
 routes.jobssearch.reqs.page = "[0-9]+"
 
 ;Job basic refine page
-routes.jobsbasicrefine.route = "/Jobs/:cat1name/:cat2name/:cat3name/:city/:state/:country/:region/refine/:cat1/:cat2/:cat3/:cat4/:cat5/:page"
+routes.jobsbasicrefine.route = "/Jobs/:cat1name/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat1/:cat2/:cat3/:page"
 routes.jobsbasicrefine.defaults.controller = jobs
 routes.jobsbasicrefine.defaults.action = jobsrefine
 routes.jobsbasicrefine.defaults.city = ""
 routes.jobsbasicrefine.defaults.state = ""
 routes.jobsbasicrefine.defaults.country = ""
-routes.jobsbasicrefine.defaults.region = ""
+routes.jobsbasicrefine.defaults.locationid = ""
 routes.jobsbasicrefine.defaults.page = 1
 routes.jobsbasicrefine.reqs.page = "[0-9]+"
 
@@ -182,7 +217,7 @@ routes.refinedispatch.defaults.controller = controller
 routes.refinedispatch.defaults.action = refinedispatch
 
 
-
+;Dispatch request from homepage.
 routes.searchdispatch.route = "/search"
 routes.searchdispatch.defaults.controller = index
 routes.searchdispatch.defaults.action = categorydispatch
