--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -122,6 +122,75 @@ routes.businesslistingsbasic.defaults.page = 1
 routes.businesslistingsbasic.reqs.page = "[0-9]+"
 
 
+;This is basic url to jobs page (for SEO).
+routes.activitiesbasic.route = "/Activities/:city/:state/:country/:locationid/:page"
+routes.activitiesbasic.defaults.controller = activities
+routes.activitiesbasic.defaults.action = activities
+routes.activitiesbasic.defaults.city = ""
+routes.activitiesbasic.defaults.state = ""
+routes.activitiesbasic.defaults.country = ""
+routes.activitiesbasic.defaults.locationid = ""
+routes.activitiesbasic.defaults.page = 1
+routes.activitiesbasic.reqs.page = "[0-9]+"
+
+routes.activitiessearch.route = "/Activities/:query/:city/:state/:country/:locationid/search/:page"
+routes.activitiessearch.defaults.controller = activities
+routes.activitiessearch.defaults.action = activitiessearch
+routes.activitiessearch.defaults.query = ""
+routes.activitiessearch.defaults.city = ""
+routes.activitiessearch.defaults.state = ""
+routes.activitiessearch.defaults.country = ""
+routes.activitiessearch.defaults.region = ""
+routes.activitiessearch.defaults.locationid = ""
+routes.activitiessearch.defaults.page = 1
+routes.activitiessearch.reqs.page = "[0-9]+"
+
+routes.activitiesbasicrefine.route = "/Activities/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat2/:cat3/:page"
+routes.activitiesbasicrefine.defaults.controller = activities
+routes.activitiesbasicrefine.defaults.action = activitiesrefine
+routes.activitiesbasicrefine.defaults.city = ""
+routes.activitiesbasicrefine.defaults.state = ""
+routes.activitiesbasicrefine.defaults.country = ""
+routes.activitiesbasicrefine.defaults.locationid = ""
+routes.activitiesbasicrefine.defaults.page = 1
+routes.activitiesbasicrefine.reqs.page = "[0-9]+"
+
+
+
+
+;This is basic url to jobs page (for SEO).
+routes.restaurantsbasic.route = "/Restaurants/:city/:state/:country/:locationid/:page"
+routes.restaurantsbasic.defaults.controller = restaurants
+routes.restaurantsbasic.defaults.action = restaurants
+routes.restaurantsbasic.defaults.city = ""
+routes.restaurantsbasic.defaults.state = ""
+routes.restaurantsbasic.defaults.country = ""
+routes.restaurantsbasic.defaults.locationid = ""
+routes.restaurantsbasic.defaults.page = 1
+routes.restaurantsbasic.reqs.page = "[0-9]+"
+
+routes.restaurantssearch.route = "/Restaurants/:query/:city/:state/:country/:locationid/search/:page"
+routes.restaurantssearch.defaults.controller = restaurants
+routes.restaurantssearch.defaults.action = restaurantssearch
+routes.restaurantssearch.defaults.query = ""
+routes.restaurantssearch.defaults.city = ""
+routes.restaurantssearch.defaults.state = ""
+routes.restaurantssearch.defaults.country = ""
+routes.restaurantssearch.defaults.region = ""
+routes.restaurantssearch.defaults.locationid = ""
+routes.restaurantssearch.defaults.page = 1
+routes.restaurantssearch.reqs.page = "[0-9]+"
+
+routes.restaurantsbasicrefine.route = "/Restaurants/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat2/:cat3/:page"
+routes.restaurantsbasicrefine.defaults.controller = restaurants
+routes.restaurantsbasicrefine.defaults.action = restaurantsrefine
+routes.restaurantsbasicrefine.defaults.city = ""
+routes.restaurantsbasicrefine.defaults.state = ""
+routes.restaurantsbasicrefine.defaults.country = ""
+routes.restaurantsbasicrefine.defaults.locationid = ""
+routes.restaurantsbasicrefine.defaults.page = 1
+routes.restaurantsbasicrefine.reqs.page = "[0-9]+"
+       
 
 
 
