--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -122,6 +122,56 @@ routes.businesslistingsbasic.defaults.page = 1
 routes.businesslistingsbasic.reqs.page = "[0-9]+"
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+;This is basic url to jobs page (for SEO).
+routes.classifiedsbasic.route = "/Classifieds/:city/:state/:country/:locationid/:page"
+routes.classifiedsbasic.defaults.controller = classifieds
+routes.classifiedsbasic.defaults.action = classifieds
+routes.classifiedsbasic.defaults.city = ""
+routes.classifiedsbasic.defaults.state = ""
+routes.classifiedsbasic.defaults.country = ""
+routes.classifiedsbasic.defaults.locationid = ""
+routes.classifiedsbasic.defaults.page = 1
+routes.classifiedsbasic.reqs.page = "[0-9]+"
+
+routes.classifiedssearch.route = "/Classifieds/:query/:city/:state/:country/:locationid/search/:page"
+routes.classifiedssearch.defaults.controller = classifieds
+routes.classifiedssearch.defaults.action = classifiedssearch
+routes.classifiedssearch.defaults.query = ""
+routes.classifiedssearch.defaults.city = ""
+routes.classifiedssearch.defaults.state = ""
+routes.classifiedssearch.defaults.country = ""
+routes.classifiedssearch.defaults.region = ""
+routes.classifiedssearch.defaults.locationid = ""
+routes.classifiedssearch.defaults.page = 1
+routes.classifiedssearch.reqs.page = "[0-9]+"
+
+routes.classifiedsbasicrefine.route = "/Classifieds/:cat2name/:city/:state/:country/:locationid/refine/:cat2/:page"
+routes.classifiedsbasicrefine.defaults.controller = classifieds
+routes.classifiedsbasicrefine.defaults.action = classifiedsrefine
+routes.classifiedsbasicrefine.defaults.city = ""
+routes.classifiedsbasicrefine.defaults.state = ""
+routes.classifiedsbasicrefine.defaults.country = ""
+routes.classifiedsbasicrefine.defaults.locationid = ""
+routes.classifiedsbasicrefine.defaults.page = 1
+routes.classifiedsbasicrefine.reqs.page = "[0-9]+"
+
+
 ;This is basic url to jobs page (for SEO).
 routes.activitiesbasic.route = "/Activities/:city/:state/:country/:locationid/:page"
 routes.activitiesbasic.defaults.controller = activities
