--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -133,7 +133,37 @@ routes.businesslistingsbasic.reqs.page = "[0-9]+"
 
 
 
+routes.carsbasic.route = "/Cars/:city/:state/:country/:locationid/:page"
+routes.carsbasic.defaults.controller = cars
+routes.carsbasic.defaults.action = cars
+routes.carsbasic.defaults.city = ""
+routes.carsbasic.defaults.state = ""
+routes.carsbasic.defaults.country = ""
+routes.carsbasic.defaults.locationid = ""
+routes.carsbasic.defaults.page = 1
+routes.carsbasic.reqs.page = "[0-9]+"
 
+routes.carssearch.route = "/Cars/:query/:city/:state/:country/:locationid/search/:page"
+routes.carssearch.defaults.controller = cars
+routes.carssearch.defaults.action = carssearch
+routes.carssearch.defaults.query = ""
+routes.carssearch.defaults.city = ""
+routes.carssearch.defaults.state = ""
+routes.carssearch.defaults.country = ""
+routes.carssearch.defaults.region = ""
+routes.carssearch.defaults.locationid = ""
+routes.carssearch.defaults.page = 1
+routes.carssearch.reqs.page = "[0-9]+"
+
+routes.carsbasicrefine.route = "/Cars/:cat1name/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat1/:cat2/:cat3/:min/:max/:page"
+routes.carsbasicrefine.defaults.controller = cars
+routes.carsbasicrefine.defaults.action = carsrefine
+routes.carsbasicrefine.defaults.city = ""
+routes.carsbasicrefine.defaults.state = ""
+routes.carsbasicrefine.defaults.country = ""
+routes.carsbasicrefine.defaults.locationid = ""
+routes.carsbasicrefine.defaults.page = 1
+routes.carsbasicrefine.reqs.page = "[0-9]+"
 
 
 
