--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -125,7 +125,37 @@ routes.businesslistingsbasic.reqs.page = "[0-9]+"
 
 
 
+routes.healthandfitnessbasic.route = "/Health & Fitness/:city/:state/:country/:locationid/:page"
+routes.healthandfitnessbasic.defaults.controller = healthandfitness
+routes.healthandfitnessbasic.defaults.action = healthandfitness
+routes.healthandfitnessbasic.defaults.city = ""
+routes.healthandfitnessbasic.defaults.state = ""
+routes.healthandfitnessbasic.defaults.country = ""
+routes.healthandfitnessbasic.defaults.locationid = ""
+routes.healthandfitnessbasic.defaults.page = 1
+routes.healthandfitnessbasic.reqs.page = "[0-9]+"
 
+routes.healthandfitnesssearch.route = "/Health & Fitness/:query/:city/:state/:country/:locationid/search/:page"
+routes.healthandfitnesssearch.defaults.controller = healthandfitness
+routes.healthandfitnesssearch.defaults.action = healthandfitnesssearch
+routes.healthandfitnesssearch.defaults.query = ""
+routes.healthandfitnesssearch.defaults.city = ""
+routes.healthandfitnesssearch.defaults.state = ""
+routes.healthandfitnesssearch.defaults.country = ""
+routes.healthandfitnesssearch.defaults.region = ""
+routes.healthandfitnesssearch.defaults.locationid = ""
+routes.healthandfitnesssearch.defaults.page = 1
+routes.healthandfitnesssearch.reqs.page = "[0-9]+"
+                               
+routes.healthandfitnessbasicrefine.route = "/Health & Fitness/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat2/:cat3/:page"
+routes.healthandfitnessbasicrefine.defaults.controller = healthandfitness
+routes.healthandfitnessbasicrefine.defaults.action = healthandfitnessrefine
+routes.healthandfitnessbasicrefine.defaults.city = ""
+routes.healthandfitnessbasicrefine.defaults.state = ""
+routes.healthandfitnessbasicrefine.defaults.country = ""
+routes.healthandfitnessbasicrefine.defaults.locationid = ""
+routes.healthandfitnessbasicrefine.defaults.page = 1
+routes.healthandfitnessbasicrefine.reqs.page = "[0-9]+"
 
 
 
