--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -25,46 +25,46 @@
 
 
 
-routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
-routes.realestatebasic.defaults.controller = search
-routes.realestatebasic.defaults.action = jobssearch
-routes.realestatebasic.defaults.city = ""
-routes.realestatebasic.defaults.state = ""
-routes.realestatebasic.defaults.country = ""
-routes.realestatebasic.defaults.region = ""
-routes.realestatebasic.defaults.page = 1
-routes.realestatebasic.reqs.page = "[0-9]+"
+;routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
+;routes.realestatebasic.defaults.controller = search
+;routes.realestatebasic.defaults.action = jobssearch
+;routes.realestatebasic.defaults.city = ""
+;routes.realestatebasic.defaults.state = ""
+;routes.realestatebasic.defaults.country = ""
+;routes.realestatebasic.defaults.region = ""
+;routes.realestatebasic.defaults.page = 1
+;routes.realestatebasic.reqs.page = "[0-9]+"
 
-routes.classifiedsbasic.route = "/Classifieds/:city/:state/:country/:region/:page"
-routes.classifiedsbasic.defaults.controller = jobs
-routes.classifiedsbasic.defaults.action = searchjobs
-routes.classifiedsbasic.defaults.city = ""
-routes.classifiedsbasic.defaults.state = ""
-routes.classifiedsbasic.defaults.country = ""
-routes.classifiedsbasic.defaults.region = ""
-routes.classifiedsbasic.defaults.page = 1
-routes.classifiedsbasic.reqs.page = "[0-9]+"
+;routes.classifiedsbasic.route = "/Classifieds/:city/:state/:country/:region/:page"
+;routes.classifiedsbasic.defaults.controller = jobs
+;routes.classifiedsbasic.defaults.action = searchjobs
+;routes.classifiedsbasic.defaults.city = ""
+;routes.classifiedsbasic.defaults.state = ""
+;routes.classifiedsbasic.defaults.country = ""
+;routes.classifiedsbasic.defaults.region = ""
+;routes.classifiedsbasic.defaults.page = 1
+;routes.classifiedsbasic.reqs.page = "[0-9]+"
 
-routes.carsalebasic.route = "/Car Sale/:city/:state/:country/:region/:page"
-routes.carsalebasic.defaults.controller = jobs
-routes.carsalebasic.defaults.action = jobssearch
-routes.carsalebasic.defaults.city = ""
-routes.carsalebasic.defaults.state = ""
-routes.carsalebasic.defaults.country = ""
-routes.carsalebasic.defaults.region = ""
-routes.carsalebasic.defaults.page = 1
-routes.carsalebasic.reqs.page = "[0-9]+"
+;routes.carsalebasic.route = "/Car Sale/:city/:state/:country/:region/:page"
+;routes.carsalebasic.defaults.controller = jobs
+;routes.carsalebasic.defaults.action = jobssearch
+;routes.carsalebasic.defaults.city = ""
+;routes.carsalebasic.defaults.state = ""
+;routes.carsalebasic.defaults.country = ""
+;routes.carsalebasic.defaults.region = ""
+;routes.carsalebasic.defaults.page = 1
+;routes.carsalebasic.reqs.page = "[0-9]+"
 
 
-routes.healthfitnessbasic.route = "/Health & Fitness/:city/:state/:country/:region/:page"
-routes.healthfitnessbasic.defaults.controller = jobs
-routes.healthfitnessbasic.defaults.action = jobssearch
-routes.healthfitnessbasic.defaults.city = ""
-routes.healthfitnessbasic.defaults.state = ""
-routes.healthfitnessbasic.defaults.country = ""
-routes.healthfitnessbasic.defaults.region = ""
-routes.healthfitnessbasic.defaults.page = 1
-routes.healthfitnessbasic.reqs.page = "[0-9]+"
+;routes.healthfitnessbasic.route = "/Health & Fitness/:city/:state/:country/:region/:page"
+;routes.healthfitnessbasic.defaults.controller = jobs
+;routes.healthfitnessbasic.defaults.action = jobssearch
+;routes.healthfitnessbasic.defaults.city = ""
+;routes.healthfitnessbasic.defaults.state = ""
+;routes.healthfitnessbasic.defaults.country = ""
+;routes.healthfitnessbasic.defaults.region = ""
+;routes.healthfitnessbasic.defaults.page = 1
+;routes.healthfitnessbasic.reqs.page = "[0-9]+"
 
 
 routes.eventsbasic.route = "/Events/:city/:state/:country/:region/:page"
@@ -78,15 +78,15 @@ routes.eventsbasic.defaults.page = 1
 routes.eventsbasic.reqs.page = "[0-9]+"
 
 
-routes.activitiesbasic.route = "/Activities/:city/:state/:country/:region/:page"
-routes.activitiesbasic.defaults.controller = jobs
-routes.activitiesbasic.defaults.action = searchjobs
-routes.activitiesbasic.defaults.city = ""
-routes.activitiesbasic.defaults.state = ""
-routes.activitiesbasic.defaults.country = ""
-routes.activitiesbasic.defaults.region = ""
-routes.activitiesbasic.defaults.page = 1
-routes.activitiesbasic.reqs.page = "[0-9]+"
+;routes.activitiesbasic.route = "/Activities/:city/:state/:country/:region/:page"
+;routes.activitiesbasic.defaults.controller = jobs
+;routes.activitiesbasic.defaults.action = searchjobs
+;routes.activitiesbasic.defaults.city = ""
+;routes.activitiesbasic.defaults.state = ""
+;routes.activitiesbasic.defaults.country = ""
+;routes.activitiesbasic.defaults.region = ""
+;routes.activitiesbasic.defaults.page = 1
+;routes.activitiesbasic.reqs.page = "[0-9]+"
 
 
 routes.hotelsbasic.route = "/Hotels/:city/:state/:country/:region/:page"
@@ -100,26 +100,63 @@ routes.hotelsbasic.defaults.page = 1
 routes.hotelsbasic.reqs.page = "[0-9]+"
 
 
-routes.restaurantsbasic.route = "/Restaurants/:city/:state/:country/:region/:page"
-routes.restaurantsbasic.defaults.controller = jobs
-routes.restaurantsbasic.defaults.action = searchjobs
-routes.restaurantsbasic.defaults.city = ""
-routes.restaurantsbasic.defaults.state = ""
-routes.restaurantsbasic.defaults.country = ""
-routes.restaurantsbasic.defaults.region = ""
-routes.restaurantsbasic.defaults.page = 1
-routes.restaurantsbasic.reqs.page = "[0-9]+"
+;routes.restaurantsbasic.route = "/Restaurants/:city/:state/:country/:region/:page"
+;routes.restaurantsbasic.defaults.controller = jobs
+;routes.restaurantsbasic.defaults.action = searchjobs
+;routes.restaurantsbasic.defaults.city = ""
+;routes.restaurantsbasic.defaults.state = ""
+;routes.restaurantsbasic.defaults.country = ""
+;routes.restaurantsbasic.defaults.region = ""
+;routes.restaurantsbasic.defaults.page = 1
+;routes.restaurantsbasic.reqs.page = "[0-9]+"
 
 
-routes.businesslistingsbasic.route = "/Business Listings/:city/:state/:country/:locationid/:page"
-routes.businesslistingsbasic.defaults.controller = jobs
-routes.businesslistingsbasic.defaults.action = jobssearch
+;routes.businesslistingsbasic.route = "/Business Listings/:city/:state/:country/:locationid/:page"
+;routes.businesslistingsbasic.defaults.controller = jobs
+;routes.businesslistingsbasic.defaults.action = jobssearch
+;routes.businesslistingsbasic.defaults.city = ""
+;routes.businesslistingsbasic.defaults.state = ""
+;routes.businesslistingsbasic.defaults.country = ""
+;routes.businesslistingsbasic.defaults.locationid = ""
+;routes.businesslistingsbasic.defaults.page = 1
+;routes.businesslistingsbasic.reqs.page = "[0-9]+"
+
+
+
+
+
+;This is basic url to jobs page (for SEO).
+routes.businesslistingsbasic.route = "/Businesses/:city/:state/:country/:locationid/:page"
+routes.businesslistingsbasic.defaults.controller = businesslistings
+routes.businesslistingsbasic.defaults.action = Listings
 routes.businesslistingsbasic.defaults.city = ""
 routes.businesslistingsbasic.defaults.state = ""
 routes.businesslistingsbasic.defaults.country = ""
 routes.businesslistingsbasic.defaults.locationid = ""
 routes.businesslistingsbasic.defaults.page = 1
 routes.businesslistingsbasic.reqs.page = "[0-9]+"
+
+routes.businesslistingssearch.route = "/Businesses/:query/:city/:state/:country/:locationid/search/:page"
+routes.businesslistingssearch.defaults.controller = businesslistings
+routes.businesslistingssearch.defaults.action = Listingssearch
+routes.businesslistingssearch.defaults.query = ""
+routes.businesslistingssearch.defaults.city = ""
+routes.businesslistingssearch.defaults.state = ""
+routes.businesslistingssearch.defaults.country = ""
+routes.businesslistingssearch.defaults.region = ""
+routes.businesslistingssearch.defaults.locationid = ""
+routes.businesslistingssearch.defaults.page = 1
+routes.businesslistingssearch.reqs.page = "[0-9]+"
+
+routes.businesslistingsbasicrefine.route = "/Businesses/:cat2name/:city/:state/:country/:locationid/refine/:cat2/:page"
+routes.businesslistingsbasicrefine.defaults.controller = businesslistings
+routes.businesslistingsbasicrefine.defaults.action = Listingsrefine
+routes.businesslistingsbasicrefine.defaults.city = ""
+routes.businesslistingsbasicrefine.defaults.state = ""
+routes.businesslistingsbasicrefine.defaults.country = ""
+routes.businesslistingsbasicrefine.defaults.locationid = ""
+routes.businesslistingsbasicrefine.defaults.page = 1
+routes.businesslistingsbasicrefine.reqs.page = "[0-9]+"
 
 
 
