--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -376,6 +376,43 @@ routes.realestatebasicrefine.reqs.page = "[0-9]+"
 
 
 ;This is basic url to jobs page (for SEO).
+routes.resumesbasic.route = "/Resumes/:city/:state/:country/:locationid/:page"
+routes.resumesbasic.defaults.controller = resumes
+routes.resumesbasic.defaults.action = jobs
+routes.resumesbasic.defaults.city = ""
+routes.resumesbasic.defaults.state = ""
+routes.resumesbasic.defaults.country = ""
+routes.resumesbasic.defaults.locationid = ""
+routes.resumesbasic.defaults.page = 1
+routes.resumesbasic.reqs.page = "[0-9]+"
+
+;Job search page.
+routes.resumessearch.route = "/Resumes/:query/:city/:state/:country/:locationid/search/:page"
+routes.resumessearch.defaults.controller = resumes
+routes.resumessearch.defaults.action = jobssearch
+routes.resumessearch.defaults.query = ""
+routes.resumessearch.defaults.city = ""
+routes.resumessearch.defaults.state = ""
+routes.resumessearch.defaults.country = ""
+routes.resumessearch.defaults.region = ""
+routes.resumessearch.defaults.locationid = ""
+routes.resumessearch.defaults.page = 1
+routes.resumessearch.reqs.page = "[0-9]+"
+
+;Job basic refine page
+routes.resumesbasicrefine.route = "/Resumes/:cat1name/:cat2name/:cat3name/:city/:state/:country/:locationid/refine/:cat1/:cat2/:cat3/:page"
+routes.resumesbasicrefine.defaults.controller = resumes
+routes.resumesbasicrefine.defaults.action = jobsrefine
+routes.resumesbasicrefine.defaults.city = ""
+routes.resumesbasicrefine.defaults.state = ""
+routes.resumesbasicrefine.defaults.country = ""
+routes.resumesbasicrefine.defaults.locationid = ""
+routes.resumesbasicrefine.defaults.page = 1
+routes.resumesbasicrefine.reqs.page = "[0-9]+"
+
+
+
+;This is basic url to jobs page (for SEO).
 routes.jobsbasic.route = "/Jobs/:city/:state/:country/:locationid/:page"
 routes.jobsbasic.defaults.controller = jobs
 routes.jobsbasic.defaults.action = jobs
