--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -25,6 +25,8 @@
 
 
 
+
+
 ;routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
 ;routes.realestatebasic.defaults.controller = search
 ;routes.realestatebasic.defaults.action = jobssearch
@@ -123,6 +125,19 @@ routes.hotelsbasic.reqs.page = "[0-9]+"
 
 
 
+
+
+
+;This is basic url to jobs page (for SEO).
+routes.informationbasic.route = "/Information/:city/:state/:country/:locationid/:headingid"
+routes.informationbasic.defaults.controller = information
+routes.informationbasic.defaults.action = information
+routes.informationbasic.defaults.city = ""
+routes.informationbasic.defaults.state = ""
+routes.informationbasic.defaults.country = ""
+routes.informationbasic.defaults.locationid = ""
+routes.informationbasic.defaults.headingid = 1
+routes.informationbasic.reqs.headingid = "[0-9]+"
 
 
 ;This is basic url to jobs page (for SEO).
