--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -505,6 +505,12 @@ routes.static.defaults.controller = static
 routes.static.defaults.action = show
 routes.static.defaults.document = ''
 
+; Routs for posting.
+routes.posting.route = "/posting/:postingid/"
+routes.posting.defaults.controller = posting
+routes.posting.defaults.action = index
+
+
 ;--------------------------------------------------------------------------------------------
 ; Testing routes go below here.
 ; Test routes are typically all turned of for production.
