--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -509,7 +509,8 @@ routes.static.defaults.document = ''
 routes.posting.route = "/posting/:postingid/"
 routes.posting.defaults.controller = posting
 routes.posting.defaults.action = index
-
+routes.posting.defaults.postingid = 1
+routes.posting.reqs.postingid = "[0-9]+"
 
 ;--------------------------------------------------------------------------------------------
 ; Testing routes go below here.
