--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -16,13 +16,13 @@ debug.allow_test_routes = true
 
 db.adapter = PDO_MYSQL
 db.params.host = 127.0.0.1
-db.params.username = shs
-db.params.password = itz7ml4BPz
+;db.params.username = shs
+;db.params.password = itz7ml4BPz
 db.params.dbname = shs
 
 
-;db.params.username = root
-;db.params.password = 
+db.params.username = root
+db.params.password = 
 
 
 
