--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -148,7 +148,7 @@ google.map.key = ABQIAAAAnaiR032qG87zxZBbhGnZeBToQxMgfaPJIS1SZcCWQhU7dNXRhhT_Okr
 yahoo.search.key = lqgILF_V34Go.x3f1W.s._88M8rDMIfLnjunGH518mjgPbaICaXNbzvs5e8.Nqx5dyqrDw--
 
 
-[PRODUCTION]
+[PRODUCTION: DEVELOPMENT]
 
 website.host = "http://www.sydneyhostpot.com"
 website.title = "sydneyhostpot.com"
@@ -156,3 +156,5 @@ debug.messages = false
 
 ; Whether to allow testing routes (routes with names that begin with 'test').
 debug.allow_test_routes = false
+db.params.username = shs
+db.params.password = itz7ml4BPz
